<resources>
    <string name="app_name">WalkBuddies</string>
    <string name="title_sign_up">Sign Up</string>
    <string name="title_home">Home</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or regist</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">Walk Buddies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <!-- Strings for Sign Up page -->
    <string name="dislay_or">or</string>
    <string name="action_fb_sign_up">Sign Up with Facebook</string>
    <string name="action_google_sign_up">Sign Up with Google</string>
    <string name="action_twitter_sign_up">Sign Up with Twitter</string>

    <!-- Strings for Home page -->
    <string name="add_child">Add Child</string>
    <string name="view_groups">View Groups</string>
    <string name="kid_col_heading">KID</string>
    <string name="group_col_heading">GROUP</string>
    <string name="status_col_heading">Active</string>
    <string name="title_kids_walk_groups">Kids Walk Groups</string>
    <string name="title_register_parent">Register parent</string>
    <string name="tvParentName">Name*</string>
    <string name="tvParentAddress">Address*</string>
    <string name="tvParentMobile">Mobile*</string>
    <string name="tvParentEmail">Email*</string>
    <string name="error_empty">Empty</string>


    <!-- Strings for Create Walk Group -->
    <string name="please_create">Please create a Walk Group</string>
    <string name="please_join">Click a Walk Group to Join</string>
    <string name="select_school">Select School</string>
    <string name="please_select_search">Please select School and click Search</string>
    <string name="wg_name">Enter walk group name</string>
    <string name="wg_create">Create</string>
    <string name="wg_join">Join</string>
    <string name="wg_search">Search</string>
    <string name="wg_time_hint">Enter preferred walk time</string>
    <string name="wg_zone_hint">Enter drop zone address</string>
    <string name="view_walk_groups">View Walk Groups</string>
    <string name="create_walk_group">Create Walk Group</string>
    <string name="view_walk_group_details">View Walk Group Details</string>
    <string name="search_walk_group_long">Join existing Walk Groups</string>
    <string name="join_walk_group_title">Join Walk Group</string>
    <string name="title_btn_add_child">Add Child</string>
    <string name="title_add_child">Add Child</string>
    <string name="title_view_childs">View Childs</string>
    <string name="title_activity_walking_to_school">Walking to School</string>
    <string name="title_child_name">Name</string>
    <string name="title_child_age">Age</string>
    <string name="title_btn_absent">Absent from next walk</string>
    <string name="google_maps_key">map key</string>

    <!-- Strings for View Walk Group -->
    <string name="wg_name_label">Walk Group Name:</string>
    <string name="wg_school_label">Walk Group School:</string>
    <string name="wg_admin_label">Walk Group Admin:</string>
    <string name="wg_members_label">Walk Group Members:</string>
    <string name="wg_adults_label">Adults:</string>
    <string name="wg_child_label">Childs:</string>

</resources>
