<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="au.com.fujitsu.walkbuddies.MainActivity"
    android:background="@color/colorBackColour">

    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:id="@+id/sign_up_title_icon" />

    <Button
        android:text="@string/action_fb_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:id="@+id/button"
        android:textColor="@color/colorWhite"
        android:background="@color/colorFBSignUpPrimary"/>

    <Button
        android:text="@string/action_google_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGoogleSignUpPrimary"/>

    <Button
        android:text="@string/action_twitter_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/button3"
        android:layout_below="@+id/button2"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorTwitterSignUpPrimary"/>

    <TextView
        android:text="@string/dislay_or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button4"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textSize="32sp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        android:id="@+id/sign_up_text1" />

    <Button
        android:text="@string/action_sign_in_short"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:id="@+id/button4"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorPrimaryDark"
        android:onClick="navigateToLogin"/>

</RelativeLayout>
