<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_groups"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    android:orientation="vertical"
    tools:context="au.com.fujitsu.walkbuddies.SearchWalkGroupsActivity"
    android:background="@color/colorBackColour">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_top_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginTop="0dp"
        android:title="@string/join_walk_group_title"
        android:background="@color/colorPrimary">

        <ImageButton
            android:id="@+id/toolbar_home_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/home_icon" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_join_walk_group"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/please_select_search"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewJoin1"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/school_spinner2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewJoin1"
            android:background="@drawable/bg"
            android:hint="@string/select_school"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>


        <Button
            android:id="@+id/create_wg_button2"
            style="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/school_spinner2"
            android:text="@string/wg_search"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/colorWhite"
            android:onClick="navigateToJoinGroupsAfterSearch"/>

        <TextView
            android:text=""
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textViewError1"
            android:layout_below="@+id/create_wg_button2"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>
</LinearLayout>
