<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackColour"
    tools:context="au.com.fujitsu.walkbuddies.RegisterParent">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/tvParentName"
        android:layout_toEndOf="@+id/tvParentName"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="46dp"
        android:id="@+id/edtParentName" />

    <TextView
        android:text="@string/tvParentAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtParentName"
        android:layout_alignRight="@+id/tvParentName"
        android:layout_alignEnd="@+id/tvParentName"
        android:layout_marginTop="13dp"
        android:id="@+id/tvParetnAddress" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:layout_below="@+id/edtParentName"
        android:layout_alignLeft="@+id/edtParentName"
        android:layout_alignStart="@+id/edtParentName"
        android:id="@+id/edtParentAddress" />

    <TextView
        android:text="@string/tvParentMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtParentAddress"
        android:layout_toLeftOf="@+id/edtParentName"
        android:layout_toStartOf="@+id/edtParentName"
        android:layout_marginTop="13dp"
        android:id="@+id/tvParentMobile" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:layout_below="@+id/edtParentAddress"
        android:layout_alignLeft="@+id/edtParentAddress"
        android:layout_alignStart="@+id/edtParentAddress"
        android:id="@+id/edtParentMobile" />

    <TextView
        android:text="@string/tvParentEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtParentMobile"
        android:layout_toLeftOf="@+id/edtParentName"
        android:layout_toStartOf="@+id/edtParentName"
        android:layout_marginTop="17dp"
        android:id="@+id/tvParentEmail" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtParentEmail"
        android:layout_alignBaseline="@+id/tvParentEmail"
        android:layout_alignBottom="@+id/tvParentEmail"
        android:layout_alignLeft="@+id/edtParentMobile"
        android:layout_alignStart="@+id/edtParentMobile" />

    <Button
        android:text="Register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtParentEmail"
        android:layout_alignLeft="@+id/edtParentEmail"
        android:layout_alignStart="@+id/edtParentEmail"
        android:layout_marginLeft="9dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="106dp"
        android:id="@+id/btnRegisterParent"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:onClick="registerParent" />

    <TextView
        android:text="@string/error_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtParentAddress"
        android:layout_toRightOf="@+id/edtParentName"
        android:layout_toEndOf="@+id/edtParentName"
        android:id="@+id/tvNameError"
        android:textColor="@color/errorColor"
        android:visibility="invisible" />

    <TextView
        android:text="@string/tvParentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:id="@+id/tvParentName"
        android:layout_alignBaseline="@+id/edtParentName"
        android:layout_alignBottom="@+id/edtParentName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/error_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtParentName"
        android:layout_toRightOf="@+id/edtParentAddress"
        android:layout_toEndOf="@+id/edtParentAddress"
        android:id="@+id/tvParentAddressError"
        android:visibility="invisible"
        android:textColor="@color/errorColor" />

    <TextView
        android:text="@string/error_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtParentAddress"
        android:layout_toRightOf="@+id/edtParentMobile"
        android:layout_toEndOf="@+id/edtParentMobile"
        android:id="@+id/tvParentMobileError"
        android:textColor="@color/errorColor"
        android:visibility="invisible" />

    <TextView
        android:text="@string/error_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edtParentEmail"
        android:layout_toRightOf="@+id/edtParentEmail"
        android:layout_toEndOf="@+id/edtParentEmail"
        android:id="@+id/tvParentEmailError"
        android:textColor="@color/errorColor"
        android:visibility="invisible" />

</RelativeLayout>
