<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/child_row"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/label_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvParentName"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_weight="1"
            android:typeface="monospace"
            android:fontFamily="sans-serif"
            android:textSize="15dp"
            android:background="@drawable/bg"
            android:height="20sp" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/id"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="id"
            android:textStyle="bold"
            android:gravity="left"
            android:layout_weight="1"
            android:typeface="monospace"
            android:fontFamily="sans-serif"
            android:textSize="30dp"
            android:background="@drawable/bg"
            android:height="40sp" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/label_2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvParentEmail"
            android:layout_weight="1"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@color/colorBackColour"
            android:height="20sp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="right"
            android:id="@+id/label_3"
            android:text="@string/tvParentMobile"
            android:textSize="15dp"
            android:textStyle="bold"
            android:background="@color/colorBackColour"
            android:height="20sp" />
    </TableRow>

    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent">

        <TextView
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/categoryId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="categoryId"
            android:layout_weight="1"
            android:textSize="30dp"
            android:textStyle="bold"
            android:background="@color/colorBackColour"
            android:height="40sp" />

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_weight="1"
            android:textColor="@color/colorPrimaryDark"
            android:gravity="right"
            android:id="@+id/description"
            android:text="description"
            android:textSize="30dp"
            android:textStyle="bold"
            android:background="@color/colorBackColour"
            android:height="40sp" />
    </TableRow>
</TableLayout>